# TrailEngine

./: README.md
trailEngine/: CMakeLists.txt  CMakeLists.txt.user.6e08d7a
trailEngine-build/: CMakeCache.txt  ImacGL.cbp  Makefile  TrailEngine.cbp  cmake_install.cmake
trailEngine-build/TP_template/: Makefile  TP_template_SDLtemplate  cmake_install.cmake
trailEngine-build/TP_trailRender/: Makefile  TP_trailRender_main  cmake_install.cmake  stdout.txt
trailEngine-build/TP_trailRender/shaders/: trail.fs.glsl
trailEngine-build/TP_triangle/: Makefile  TP_triangle_triangle  cmake_install.cmake
trailEngine-build/glimac/: Makefile  cmake_install.cmake
trailEngine/TP_template/: CMakeLists.txt
trailEngine/TP_trailRender/: CMakeLists.txt  main.cpp
trailEngine/TP_trailRender/shaders/: trail.fs.glsl  trail.vs.glsl
trailEngine/TP_triangle/: triangle.cpp
